--- a/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -1,3 +1,4 @@
+uuid: 12bfcb62-7c72-4462-ae5d-5f397ba71450
 langcode: en
 status: true
 dependencies:
@@ -12,6 +13,7 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_component
     - field.field.node.landing_page.field_landing_page_contact
     - field.field.node.landing_page.field_landing_page_header
+    - field.field.node.landing_page.field_landing_page_hero_banner
     - field.field.node.landing_page.field_landing_page_hero_image
     - field.field.node.landing_page.field_landing_page_hero_logo
     - field.field.node.landing_page.field_landing_page_hero_theme
@@ -21,7 +23,10 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_show_contact
     - field.field.node.landing_page.field_landing_page_summary
     - field.field.node.landing_page.field_metatags
+    - field.field.node.landing_page.field_node_primary_site
+    - field.field.node.landing_page.field_node_site
     - field.field.node.landing_page.field_related_links
+    - field.field.node.landing_page.field_show_content_rating
     - field.field.node.landing_page.field_show_news_search
     - field.field.node.landing_page.field_show_related_content
     - field.field.node.landing_page.field_show_site_section_nav
@@ -38,7 +43,6 @@ dependencies:
   module:
     - content_moderation
     - entity_browser
-    - entity_reference_revisions
     - field_group
     - inline_entity_form
     - maxlength
@@ -84,6 +88,7 @@ third_party_settings:
       children:
         - title
         - field_featured_image
+        - field_landing_page_hero_banner
         - field_landing_page_hero_image
         - field_landing_page_hero_logo
         - field_graphical_image
@@ -228,7 +233,7 @@ third_party_settings:
       region: content
     group_header_content:
       children:
-      - field_landing_page_header
+        - field_landing_page_header
       parent_name: group_content
       weight: 2
       format_type: tab
@@ -255,7 +260,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_bottom_graphical_image:
-    weight: 5
+    weight: 6
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -285,7 +290,7 @@ content:
     type: entity_browser_entity_reference
     region: content
   field_graphical_image:
-    weight: 4
+    weight: 5
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -336,6 +341,10 @@ content:
       add_mode: select
       form_display_mode: default
       default_paragraph_type: _none
+      closed_mode_threshold: 0
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
     third_party_settings: {  }
   field_landing_page_contact:
     type: entity_reference_paragraphs
@@ -361,24 +370,25 @@ content:
       add_mode: select
       form_display_mode: default
       default_paragraph_type: _none
+      closed_mode_threshold: 0
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+    third_party_settings: {  }
+    region: content
+  field_landing_page_hero_banner:
+    type: entity_reference_paragraphs
+    weight: 2
+    settings:
+      title: 'Hero Banner'
+      title_plural: 'Hero Banners'
+      edit_mode: closed
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_landing_page_hero_image:
-    weight: 2
-    settings:
-      entity_browser: tide_image_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: default
-      field_widget_replace: false
-      open: false
-    third_party_settings: {  }
-    type: entity_browser_entity_reference
-    region: content
-  field_landing_page_hero_logo:
     weight: 3
     settings:
       entity_browser: tide_image_browser
@@ -393,14 +403,29 @@ content:
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
+  field_landing_page_hero_logo:
+    weight: 4
+    settings:
+      entity_browser: tide_image_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: default
+      field_widget_replace: false
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
   field_landing_page_hero_theme:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_landing_page_intro_text:
-    weight: 7
+    weight: 8
     settings:
       rows: 5
       placeholder: ''
@@ -409,7 +434,7 @@ content:
     region: content
   field_landing_page_key_journeys:
     type: entity_reference_paragraphs
-    weight: 9
+    weight: 10
     settings:
       title: 'Key journey'
       title_plural: 'Key journeys'
@@ -435,7 +460,7 @@ content:
     type: boolean_checkbox
     region: content
   field_landing_page_summary:
-    weight: 8
+    weight: 9
     settings:
       rows: 5
       placeholder: ''
@@ -453,6 +478,20 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
+  field_node_primary_site:
+    type: options_buttons
+    region: content
+    field_name: field_node_primary_site
+    weight: 18
+    settings: {  }
+    third_party_settings: {  }
+  field_node_site:
+    type: options_buttons
+    region: content
+    field_name: field_node_site
+    weight: 17
+    settings: {  }
+    third_party_settings: {  }
   field_related_links:
     type: paragraphs
     weight: 38
@@ -465,6 +504,10 @@ content:
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
+      closed_mode_threshold: 0
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
     third_party_settings: {  }
     region: content
   field_show_content_rating:
