--- a/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_component
     - field.field.node.landing_page.field_landing_page_contact
     - field.field.node.landing_page.field_landing_page_header
+    - field.field.node.landing_page.field_landing_page_hero_banner
     - field.field.node.landing_page.field_landing_page_hero_image
     - field.field.node.landing_page.field_landing_page_hero_logo
     - field.field.node.landing_page.field_landing_page_hero_theme
@@ -84,6 +85,7 @@ third_party_settings:
       children:
         - title
         - field_featured_image
+        - field_landing_page_hero_banner
         - field_landing_page_hero_image
         - field_landing_page_hero_logo
         - field_graphical_image
@@ -228,7 +230,7 @@ third_party_settings:
       region: content
     group_header_content:
       children:
-      - field_landing_page_header
+        - field_landing_page_header
       parent_name: group_content
       weight: 2
       format_type: tab
@@ -255,7 +257,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_bottom_graphical_image:
-    weight: 5
+    weight: 6
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -285,7 +287,7 @@ content:
     type: entity_browser_entity_reference
     region: content
   field_graphical_image:
-    weight: 4
+    weight: 5
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -336,6 +338,10 @@ content:
       add_mode: select
       form_display_mode: default
       default_paragraph_type: _none
+      closed_mode_threshold: 0
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
     third_party_settings: {  }
   field_landing_page_contact:
     type: entity_reference_paragraphs
@@ -361,24 +367,25 @@ content:
       add_mode: select
       form_display_mode: default
       default_paragraph_type: _none
+      closed_mode_threshold: 0
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
+    third_party_settings: {  }
+    region: content
+  field_landing_page_hero_banner:
+    type: entity_reference_paragraphs
+    weight: 2
+    settings:
+      title: 'Hero Banner'
+      title_plural: 'Hero Banners'
+      edit_mode: closed
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_landing_page_hero_image:
-    weight: 2
-    settings:
-      entity_browser: tide_image_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: default
-      field_widget_replace: false
-      open: false
-    third_party_settings: {  }
-    type: entity_browser_entity_reference
-    region: content
-  field_landing_page_hero_logo:
     weight: 3
     settings:
       entity_browser: tide_image_browser
@@ -393,14 +400,29 @@ content:
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
+  field_landing_page_hero_logo:
+    weight: 4
+    settings:
+      entity_browser: tide_image_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: default
+      field_widget_replace: false
+      open: false
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
   field_landing_page_hero_theme:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_landing_page_intro_text:
-    weight: 7
+    weight: 8
     settings:
       rows: 5
       placeholder: ''
@@ -409,7 +431,7 @@ content:
     region: content
   field_landing_page_key_journeys:
     type: entity_reference_paragraphs
-    weight: 9
+    weight: 10
     settings:
       title: 'Key journey'
       title_plural: 'Key journeys'
@@ -435,7 +457,7 @@ content:
     type: boolean_checkbox
     region: content
   field_landing_page_summary:
-    weight: 8
+    weight: 9
     settings:
       rows: 5
       placeholder: ''
@@ -453,6 +475,20 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
+  field_node_primary_site:
+    type: options_buttons
+    region: content
+    field_name: field_node_primary_site
+    weight: 18
+    settings: {  }
+    third_party_settings: {  }
+  field_node_site:
+    type: options_buttons
+    region: content
+    field_name: field_node_site
+    weight: 17
+    settings: {  }
+    third_party_settings: {  }
   field_related_links:
     type: paragraphs
     weight: 38
@@ -465,6 +501,10 @@ content:
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
+      closed_mode_threshold: 0
+      features:
+        duplicate: duplicate
+        collapse_edit_all: collapse_edit_all
     third_party_settings: {  }
     region: content
   field_show_content_rating:
