--- a/config/install/core.entity_view_display.node.landing_page.default.yml
+++ b/config/install/core.entity_view_display.node.landing_page.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.landing_page.field_landing_page_component
     - field.field.node.landing_page.field_landing_page_contact
     - field.field.node.landing_page.field_landing_page_header
+    - field.field.node.landing_page.field_landing_page_hero_banner
     - field.field.node.landing_page.field_landing_page_hero_image
     - field.field.node.landing_page.field_landing_page_hero_logo
     - field.field.node.landing_page.field_landing_page_hero_theme
@@ -85,18 +86,14 @@ content:
   field_landing_page_c_primary:
     weight: 8
     label: above
-    settings:
-      view_mode: default
-      link: ''
+    settings: {  }
     third_party_settings: {  }
     type: entity_reference_entity_id
     region: content
   field_landing_page_c_secondary:
     weight: 6
     label: above
-    settings:
-      view_mode: default
-      link: ''
+    settings: {  }
     third_party_settings: {  }
     type: entity_reference_entity_id
     region: content
@@ -121,6 +118,15 @@ content:
   field_landing_page_header:
     type: entity_reference_revisions_entity_view
     weight: 23
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_landing_page_hero_banner:
+    type: entity_reference_revisions_entity_view
+    weight: 24
     label: above
     settings:
       view_mode: default
@@ -248,6 +254,8 @@ content:
     region: content
 hidden:
   field_landing_page_summary: true
+  field_node_primary_site: true
+  field_node_site: true
   field_show_content_rating: true
   field_show_related_content: true
   field_show_social_sharing: true
