--- a/config/install/core.entity_form_display.node.landing_page.default.yml
+++ b/config/install/core.entity_form_display.node.landing_page.default.yml
@@ -49,198 +49,227 @@ dependencies:
     - path
 third_party_settings:
   field_group:
-    group_content:
-      children:
-        - group_key_journeys
-        - group_header_content
-        - group_top_banner
-        - group_components
-        - group_bottom_
-      parent_name: ''
-      weight: 0
-      format_type: tabs
-      format_settings:
-        direction: horizontal
-        id: ''
-        classes: ''
-      label: 'Section 1'
-      region: content
-    group_right_column:
-      children:
-        - group_site_section_navigation
-        - group_related_links
-        - group_whats_next
-        - group_contact_us
-        - group_blocks
-      parent_name: ''
-      weight: 1
-      format_type: tabs
-      format_settings:
-        id: ''
-        classes: ''
-        direction: horizontal
-      label: 'Right column'
-      region: content
-    group_key_journeys:
-      children:
-        - title
-        - field_featured_image
-        - field_landing_page_hero_image
-        - field_landing_page_hero_logo
-        - field_graphical_image
-        - field_bottom_graphical_image
-        - field_landing_page_hero_theme
-        - field_landing_page_intro_text
-        - field_landing_page_summary
-        - field_landing_page_hero_banner
-        - field_landing_page_key_journeys
-      parent_name: group_content
-      weight: 1
-      format_type: tab
-      format_settings:
-        formatter: closed
-        description: ''
-        required_fields: true
-        id: ''
-        classes: ''
-      label: 'Page Header'
-      region: content
     group_top_banner:
       children:
         - field_landing_page_c_primary
         - field_show_c_primary_caption
-      parent_name: group_content
-      weight: 4
-      format_type: tab
+      parent_name: group_header_content
+      weight: 100
+      format_type: fieldset
       format_settings:
-        formatter: closed
         description: ''
+        open: true
+        weight: '0'
         required_fields: true
         id: ''
         classes: ''
-      label: 'Primary Campaign'
+      label: 'Primary campaign'
       region: content
     group_components:
       children:
         - field_show_table_of_content
         - field_node_display_headings
         - field_landing_page_component
-      parent_name: group_content
-      weight: 5
+      parent_name: group_section_content
+      weight: -79
       format_type: tab
       format_settings:
-        formatter: closed
         description: ''
+        formatter: closed
         required_fields: true
         id: ''
         classes: ''
-      label: 'Body Content'
-      region: content
-    group_bottom_:
-      children:
-        - field_landing_page_c_secondary
-      parent_name: group_content
-      weight: 6
-      format_type: tab
-      format_settings:
-        formatter: closed
-        description: ''
-        required_fields: true
-        id: ''
-        classes: ''
-      label: 'Secondary Campaign'
-      region: content
-    group_blocks:
-      children:
-        - field_show_social_sharing
-      parent_name: group_right_column
-      weight: 30
-      format_type: tab
-      format_settings:
-        formatter: closed
-        description: ''
-        required_fields: true
-        id: ''
-        classes: ''
-      label: 'Social sharing'
+      label: 'Page content'
       region: content
     group_related_links:
       children:
         - field_show_related_content
         - field_related_links
-      parent_name: group_right_column
-      weight: 26
-      format_type: tab
+      parent_name: group_sidebar
+      weight: 10
+      format_type: fieldset
       format_settings:
         id: ''
         classes: ''
         formatter: closed
         description: ''
         required_fields: true
+        open: true
       label: 'Related links'
       region: content
     group_whats_next:
       children:
         - field_show_whats_next
         - field_whats_next
-      parent_name: group_right_column
-      weight: 27
-      format_type: tab
+      parent_name: group_sidebar
+      weight: 20
+      format_type: fieldset
       format_settings:
-        formatter: closed
         description: ''
+        formatter: closed
         required_fields: true
         id: ''
         classes: ''
-      label: 'What''s Next'
+        open: true
+      label: 'What''s next'
       region: content
     group_contact_us:
       children:
         - field_landing_page_show_contact
         - field_landing_page_contact
-      parent_name: group_right_column
-      weight: 29
-      format_type: tab
+      parent_name: group_sidebar
+      weight: 30
+      format_type: fieldset
       format_settings:
         id: ''
         classes: ''
         formatter: closed
         description: ''
         required_fields: false
+        open: true
       label: Contact
       region: content
     group_site_section_navigation:
       children:
         - field_show_site_section_nav
         - field_landing_page_nav_title
-      parent_name: group_right_column
-      weight: 25
-      format_type: tab
+      parent_name: group_sidebar
+      weight: 0
+      format_type: fieldset
       format_settings:
+        description: ''
+        formatter: closed
+        required_fields: true
         id: ''
         classes: ''
-        formatter: closed
-        description: ''
-        required_fields: true
-      label: 'Site-section Navigation'
+        open: true
+      label: 'Site-section navigation'
       region: content
     group_header_content:
       children:
         - field_landing_page_header
         - field_show_ack_of_country
-      parent_name: group_content
-      weight: 3
+        - group_top_banner
+        - group_top_banner
+      parent_name: group_section_content
+      weight: -78
       format_type: tab
       format_settings:
-        formatter: closed
         description: ''
+        formatter: closed
         required_fields: true
         id: ''
         classes: ''
-      label: 'Header Content'
+      label: 'Top page feature'
       region: content
-_core:
-  default_config_hash: pN7fy_ZaJVA-sEQWPZUCiV_-5V5W_ZSuZ7Rbql6y5kg
+    group_section_header:
+      label: 'Header Section'
+      parent_name: ''
+      children:
+        - group_header
+        - group_customised_header
+      format_type: tabs
+      format_settings:
+        direction: horizontal
+        id: node-form-group-header-section
+        classes: ''
+      region: content
+      weight: -100
+    group_header:
+      label: Header
+      parent_name: group_section_header
+      children:
+        - title
+        - field_landing_page_summary
+        - field_landing_page_intro_text
+        - field_landing_page_key_journeys
+      format_type: tab
+      format_settings:
+        description: ''
+        formatter: closed
+        required_fields: true
+        id: ''
+        classes: ''
+      region: content
+      weight: -99
+    group_section_content:
+      label: 'Content Section'
+      parent_name: ''
+      children:
+        - group_components
+        - group_header_content
+        - group_bottom_feature
+      format_type: tabs
+      format_settings:
+        direction: horizontal
+        id: node-form-group-content-section
+        classes: ''
+      region: content
+      weight: -80
+    group_section_sidebar:
+      label: 'Sidebar Section'
+      parent_name: ''
+      children:
+        - group_sidebar
+      format_type: tabs
+      format_settings:
+        direction: horizontal
+        id: node-form-group-sidebar-section
+        classes: ''
+      region: content
+      weight: -60
+    group_bottom_feature:
+      label: 'Bottom page feature'
+      parent_name: group_section_content
+      children:
+        - field_landing_page_c_secondary
+      format_type: tab
+      format_settings:
+        description: ''
+        formatter: closed
+        required_fields: true
+        id: ''
+        classes: ''
+      region: content
+      weight: -76
+    group_sidebar:
+      label: 'Side bar'
+      parent_name: group_section_sidebar
+      children:
+        - group_site_section_navigation
+        - group_site_section_navigation
+        - group_related_links
+        - group_whats_next
+        - group_contact_us
+        - field_show_social_sharing
+      format_type: tab
+      format_settings:
+        description: ''
+        formatter: closed
+        required_fields: true
+        id: ''
+        classes: ''
+      region: content
+      weight: -61
+    group_customised_header:
+      label: 'Customised Header'
+      parent_name: group_section_header
+      children:
+        - field_landing_page_hero_image
+        - field_landing_page_hero_theme
+        - field_landing_page_hero_logo
+        - field_graphical_image
+        - field_bottom_graphical_image
+        - field_landing_page_hero_banner
+      format_type: tab
+      format_settings:
+        description: ''
+        formatter: closed
+        required_fields: true
+        id: ''
+        classes: ''
+      region: content
+      weight: -98
 id: node.landing_page.default
 targetEntityType: node
 bundle: landing_page
@@ -248,12 +277,18 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 5
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_authenticated_content:
+    type: options_select
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   field_bottom_graphical_image:
-    weight: 5
+    weight: 40
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -263,12 +298,12 @@ content:
       field_widget_display_settings:
         view_mode: media_browser_preview
       field_widget_replace: false
-      open: false
+      open: true
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
   field_featured_image:
-    weight: 1
+    weight: -90
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -277,13 +312,13 @@ content:
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: media_browser_preview
-      open: false
+      open: true
       field_widget_replace: false
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
   field_graphical_image:
-    weight: 4
+    weight: 30
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -293,12 +328,12 @@ content:
       field_widget_display_settings:
         view_mode: media_browser_preview
       field_widget_replace: false
-      open: false
+      open: true
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
   field_landing_page_bg_colour:
-    weight: 19
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -309,6 +344,7 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
@@ -318,6 +354,7 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
@@ -336,12 +373,12 @@ content:
       default_paragraph_type: _none
       closed_mode_threshold: 0
       features:
-        duplicate: duplicate
         collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_landing_page_contact:
     type: entity_reference_paragraphs
-    weight: 18
+    weight: 19
     settings:
       title: 'Contact Us block'
       title_plural: 'Contact Us blocks'
@@ -365,8 +402,8 @@ content:
       default_paragraph_type: _none
       closed_mode_threshold: 0
       features:
-        duplicate: duplicate
         collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
     region: content
   field_landing_page_hero_banner:
@@ -375,14 +412,14 @@ content:
     settings:
       title: 'Hero Banner with CTA'
       title_plural: 'Hero Banners with CTA'
-      edit_mode: closed
+      edit_mode: open
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_landing_page_hero_image:
-    weight: 2
+    weight: 20
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -392,12 +429,12 @@ content:
       field_widget_display_settings:
         view_mode: default
       field_widget_replace: false
-      open: false
+      open: true
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
   field_landing_page_hero_logo:
-    weight: 3
+    weight: 50
     settings:
       entity_browser: tide_image_browser
       field_widget_display: rendered_entity
@@ -407,18 +444,18 @@ content:
       field_widget_display_settings:
         view_mode: default
       field_widget_replace: false
-      open: false
+      open: true
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
   field_landing_page_hero_theme:
-    weight: 6
+    weight: 25
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_landing_page_intro_text:
-    weight: 7
+    weight: 20
     settings:
       rows: 5
       placeholder: ''
@@ -427,10 +464,10 @@ content:
     region: content
   field_landing_page_key_journeys:
     type: entity_reference_paragraphs
-    weight: 11
+    weight: 30
     settings:
-      title: 'Key journey'
-      title_plural: 'Key journeys'
+      title: 'Header link'
+      title_plural: 'Header links'
       edit_mode: closed
       add_mode: button
       form_display_mode: default
@@ -438,7 +475,7 @@ content:
     third_party_settings: {  }
     region: content
   field_landing_page_nav_title:
-    weight: 41
+    weight: 42
     settings:
       size: 60
       placeholder: ''
@@ -453,7 +490,7 @@ content:
     type: boolean_checkbox
     region: content
   field_landing_page_summary:
-    weight: 9
+    weight: 10
     settings:
       rows: 5
       placeholder: ''
@@ -466,10 +503,17 @@ content:
     type: string_textarea
     region: content
   field_metatags:
-    weight: 16
-    settings: {  }
+    weight: 17
+    settings:
+      sidebar: true
     third_party_settings: {  }
     type: metatag_firehose
+    region: content
+  field_node_display_headings:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
     region: content
   field_related_links:
     type: paragraphs
@@ -485,8 +529,8 @@ content:
       default_paragraph_type: _none
       closed_mode_threshold: 0
       features:
-        duplicate: duplicate
         collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
     region: content
   field_show_ack_of_country:
@@ -512,7 +556,7 @@ content:
       display_label: true
     third_party_settings: {  }
   field_show_hero_image_caption:
-    weight: 42
+    weight: 20
     settings:
       display_label: true
     third_party_settings: {  }
@@ -533,11 +577,10 @@ content:
     type: boolean_checkbox
     region: content
   field_show_social_sharing:
-    type: boolean_checkbox
-    weight: 0
+    type: options_buttons
+    weight: 40
     region: content
-    settings:
-      display_label: true
+    settings: {  }
     third_party_settings: {  }
   field_show_table_of_content:
     weight: 2
@@ -546,14 +589,8 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  field_node_display_headings:
-    weight: 3
-    settings: {  }
-    third_party_settings: {  }
-    type: options_buttons
-    region: content
   field_show_topic_term_and_tags:
-    weight: 15
+    weight: 1
     settings:
       display_label: true
     third_party_settings: {  }
@@ -567,20 +604,22 @@ content:
       display_label: true
     third_party_settings: {  }
   field_tags:
+    weight: 14
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+      match_limit: 10
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_topic:
     weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_topic:
-    weight: 12
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
@@ -604,7 +643,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -612,7 +651,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 8
     region: content
     third_party_settings: {  }
   status:
@@ -647,10 +686,11 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
