--- a/config/install/field.field.node.landing_page.field_landing_page_hero_logo.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_hero_logo.yml
@@ -1,4 +1,3 @@
-uuid: 4c208d31-b2cf-449f-a011-336196222da3
 langcode: en
 status: true
 dependencies:
@@ -10,8 +9,8 @@ id: node.landing_page.field_landing_page_hero_logo
 field_name: field_landing_page_hero_logo
 entity_type: node
 bundle: landing_page
-label: 'Hero Logo'
-description: ''
+label: Logo
+description: 'A small logo can be added above the page title. This will not appear if ‘Full-width background image’ header style is selected.'
 required: false
 translatable: false
 default_value: {  }
