--- a/config/install/field.field.node.landing_page.field_landing_page_key_journeys.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_key_journeys.yml
@@ -11,8 +11,8 @@ id: node.landing_page.field_landing_page_key_journeys
 field_name: field_landing_page_key_journeys
 entity_type: node
 bundle: landing_page
-label: 'Key Journeys'
-description: ''
+label: 'Header links'
+description: 'Header links are displayed alongside the page title on introduction banner. They link to other critical pages.'
 required: false
 translatable: false
 default_value: {  }
@@ -24,22 +24,7 @@ settings:
     target_bundles:
       key_journeys: key_journeys
     target_bundles_drag_drop:
-      banner:
-        weight: 7
-        enabled: false
-      card_event:
-        weight: 8
-        enabled: false
-      card_promotion:
-        weight: 9
-        enabled: false
       key_journeys:
         enabled: true
         weight: 10
-      links:
-        weight: 11
-        enabled: false
-      related_links:
-        weight: 12
-        enabled: false
 field_type: entity_reference_revisions
