--- a/config/install/core.entity_form_display.paragraph.navigation_card.default.yml
+++ b/config/install/core.entity_form_display.paragraph.navigation_card.default.yml
@@ -13,6 +13,7 @@ dependencies:
   module:
     - entity_browser
     - link
+    - maxlength
 id: paragraph.navigation_card.default
 targetEntityType: paragraph
 bundle: navigation_card
@@ -58,7 +59,12 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
     type: string_textarea
     region: content
   field_paragraph_title:
