--- a/config/install/field.field.node.landing_page.field_landing_page_component.yml
+++ b/config/install/field.field.node.landing_page.field_landing_page_component.yml
@@ -11,10 +11,6 @@ dependencies:
     - paragraphs.paragraphs_type.card_event
     - paragraphs.paragraphs_type.card_event_auto
     - paragraphs.paragraphs_type.card_keydates
-    - paragraphs.paragraphs_type.card_navigation
-    - paragraphs.paragraphs_type.card_navigation_auto
-    - paragraphs.paragraphs_type.card_navigation_featured
-    - paragraphs.paragraphs_type.card_navigation_featured_auto
     - paragraphs.paragraphs_type.card_promotion
     - paragraphs.paragraphs_type.card_promotion_auto
     - paragraphs.paragraphs_type.complex_image
@@ -44,12 +40,6 @@ settings:
       basic_text: basic_text
       accordion: accordion
       card_event: card_event
-      card_promotion: card_promotion
-      card_promotion_auto: card_promotion_auto
-      card_navigation_featured: card_navigation_featured
-      card_navigation_featured_auto: card_navigation_featured_auto
-      card_navigation: card_navigation
-      card_navigation_auto: card_navigation_auto
       card_keydates: card_keydates
       call_to_action: call_to_action
       complex_image: complex_image
@@ -77,10 +67,10 @@ settings:
         enabled: true
         weight: -30
       card_promotion:
-        enabled: true
+        enabled: false
         weight: -29
       card_promotion_auto:
-        enabled: true
+        enabled: false
         weight: -28
       complex_image:
         enabled: true
@@ -94,18 +84,6 @@ settings:
       links:
         weight: -25
         enabled: false
-      card_navigation_featured:
-        enabled: true
-        weight: -24
-      card_navigation_featured_auto:
-        enabled: true
-        weight: -23
-      card_navigation:
-        enabled: true
-        weight: -22
-      card_navigation_auto:
-        enabled: true
-        weight: -21
       card_keydates:
         enabled: true
         weight: -20
